--- a/flask/templates/list_images.html
+++ b/flask/templates/list_images.html
@@ -31,7 +31,7 @@
                             <th>Имя файла</th>
                             <th>Дата и Время загрузки</th>
                             <th>Описание</th>
-                            <th>Комментарий</th>
+                            <th>Статус</th>
                         </tr>
                     </thead>
                     <tbody>
