--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -29,7 +29,7 @@
                 <p class="card-text">Используйте кнопку ниже для Получения описания изображения.</p>
                 <a href="/upload" class="btn custom-btn">Обработать изображение</a>
                 <br><br>
-                <p class="card-text">Так же можно посмотреть все запросы на обработку изображений.</p>
+                <p class="card-text">Посмотреть все запросы на обработку изображений.</p>
                 <a href="/show" class="btn custom-btn">Список изображений</a>
             </div>
         </div>
